[gd_scene load_steps=6 format=3 uid="uid://d2a221xmjn8e5"]

[ext_resource type="Script" path="res://Scenes/settings.gd" id="1_mmtod"]
[ext_resource type="Texture2D" uid="uid://bjhc7l56ei2re" path="res://Assets/UI/Mute Button unmuted1.png" id="2_2lt4a"]
[ext_resource type="Theme" uid="uid://ir4rfq0nqkt0" path="res://Assets/UI/UITheme.tres" id="2_83ckh"]
[ext_resource type="Texture2D" uid="uid://0v86nmf3cg1f" path="res://Assets/UI/Mute Button muted1.png" id="3_7kqo8"]
[ext_resource type="Script" path="res://Scenes/instruct.gd" id="5_xp1yt"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("2_83ckh")
script = ExtResource("1_mmtod")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 155.0
offset_top = 90.0
offset_right = 619.0
offset_bottom = 265.0
theme = ExtResource("2_83ckh")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -221.0
offset_top = -86.5
offset_right = -75.0
offset_bottom = 87.5
grow_horizontal = 2
grow_vertical = 2

[node name="Music" type="Node2D" parent="Panel/VBoxContainer"]
position = Vector2(-155, -88)

[node name="MusicLabel" type="Label" parent="Panel/VBoxContainer/Music"]
offset_left = 170.0
offset_top = 110.0
offset_right = 220.0
offset_bottom = 136.0
scale = Vector2(1.2, 1.2)
theme = ExtResource("2_83ckh")
theme_override_font_sizes/font_size = 30
text = "Muzik:
"

[node name="MusicButton" type="TextureButton" parent="Panel/VBoxContainer/Music"]
offset_left = 277.0
offset_top = 106.0
offset_right = 312.0
offset_bottom = 141.0
toggle_mode = true
texture_normal = ExtResource("2_2lt4a")
texture_pressed = ExtResource("3_7kqo8")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="SFX" type="Node2D" parent="Panel/VBoxContainer"]
position = Vector2(-155, -88)

[node name="SFXLabel" type="Label" parent="Panel/VBoxContainer/SFX"]
offset_left = 170.0
offset_top = 160.0
offset_right = 210.0
offset_bottom = 186.0
scale = Vector2(1.2, 1.2)
theme = ExtResource("2_83ckh")
theme_override_font_sizes/font_size = 30
text = "SFX:"

[node name="SFXButton" type="TextureButton" parent="Panel/VBoxContainer/SFX"]
offset_left = 277.0
offset_top = 159.0
offset_right = 312.0
offset_bottom = 194.0
toggle_mode = true
texture_normal = ExtResource("2_2lt4a")
texture_pressed = ExtResource("3_7kqo8")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Joystick" type="Node2D" parent="Panel/VBoxContainer"]
visible = false

[node name="JoystickLabel" type="Label" parent="Panel/VBoxContainer/Joystick"]
offset_left = 170.0
offset_top = 225.0
offset_right = 229.0
offset_bottom = 251.0
scale = Vector2(1.2, 1.2)
theme = ExtResource("2_83ckh")
theme_override_font_sizes/font_size = 30
text = "Joystick:"

[node name="JoystickButton" type="TextureButton" parent="Panel/VBoxContainer/Joystick"]
offset_left = 250.0
offset_top = 219.0
offset_right = 285.0
offset_bottom = 254.0
toggle_mode = true
texture_normal = ExtResource("2_2lt4a")
texture_pressed = ExtResource("3_7kqo8")
stretch_mode = 0

[node name="Control" type="Button" parent="Panel"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 0
offset_left = 241.0
offset_top = 51.0
offset_right = 367.0
offset_bottom = 91.0
theme_override_font_sizes/font_size = 30
text = "Kawalan"

[node name="Instruct" type="Control" parent="Panel/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 207.0
offset_top = 137.0
offset_right = 207.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_83ckh")
script = ExtResource("5_xp1yt")

[node name="Panel" type="Panel" parent="Panel/Control/Instruct"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -396.0
offset_top = -226.0
offset_right = 383.0
offset_bottom = 238.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/Control/Instruct"]
layout_mode = 0
offset_left = -376.0
offset_top = -209.0
offset_right = 363.0
offset_bottom = 224.0
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[img]res://Assets/UI/Keyboards/image_1-3.png[/img] atau 2 kali [img]res://Assets/UI/MOUSEBUTTONLEFT.png[/img] untuk mula atau sambung dialog dengan haiwan

[img]res://Assets/UI/Keyboards/image_91.png[/img] untuk bergerak ke kiri

[img]res://Assets/UI/Keyboards/image_88.png[/img] untuk bergerak ke kanan

Apabila anda berada di atas kayu seperti ini [img]res://Assets/World/Level 1/1wayplatform.png[/img], tekan [img]res://Assets/UI/Keyboards/image_73.png[/img] untuk kebawah

[img]res://Assets/UI/Keyboards/image_2-2.png[/img] untuk lompat

[img]res://Assets/UI/Keyboards/image_87.png[/img] untuk berinteraksi dengan objek

[img]res://Assets/UI/Keyboards/image_74.png[/img] untuk mula semula peringkat anda"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 10.0
offset_right = 140.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 30
text = "Kembali"

[connection signal="pressed" from="Panel/VBoxContainer/Music/MusicButton" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SFX/SFXButton" to="." method="_on_sfx_button_pressed"]
[connection signal="pressed" from="Panel/Control" to="." method="_on_control_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
